yukon/web/style/darkmode.css
@media (prefers-color-scheme: dark) {
    #monitor2 .port_label {
        color: white;
    }

    #monitor2 .port_label.service {
        color: lightblue !important;
    }

    .lm_controls .lm_close {
        padding-top: 0.5px;
        background: url(../../images/X_light.png) no-repeat center center !important;
        background-size: 70% !important;
    }

    .lm_close_tab {
        top: 4px !important;
        background: url(../../images/X_light.png) no-repeat center center !important;
        background-size: 80% !important;
    }

    .lm_content {
        color: #ffffff
    }

    #maybe-tabs label.selected-tab {
        background-color: #700000 !important;
    }
    #maybe-tabs label {
        background-color: #5e5e5e !important
    }
    .feedback-message {
        color: #ffffff
    }
    .is-danger {
        background-color: #793200
    }
    thead {
        background-color: #1709b3;
        color: #ffffff
    }
    .cell-highlight {
        background-color: #5e5000
    }

    .no-value {
        background-color: #1709b3
    }

    td.selected-cell {
        background-color: #1709b3;
        color: #ffffff
    }

    td.recently_reread_register {
        background-color: #700000;
        color: #ffffff
    }

    tbody>tr:hover,
    tbody>tr:hover .no-value {
        background-color: #353535;
    }

    input[type="text"],
    input[type="number"],
    .input-group-text,
    select {
        background: #353535;
        color: #ffffff;
    }

    .input-group {
        color: #ffffff !important;
    }

    label {
        color: #ffffff !important;
    }

    input[type="radio"] {
        accent-color: #34495e;
        /*background: #c7c7c7 !important;*/
        /*color: #b01f1f !important;*/
    }

    /*input[type="radio"]:checked {*/
    /*    background: #700000 !important;*/
    /*    color: white !important;*/
    /*}*/
    input[type="checkbox"] {
        accent-color: #34495e;
    }

    #toolbar {
        background: #353535;
        color: #ffffff
    }

    #btnRestoreDefaultLayout {
        background-color: #353535;
        border-color: #727272
    }

    * {
        color-scheme: dark;
    }

    body {
        background-color: #222222;
    }

    #btnShowHideToolbar {
        background-color: #646464;
    }

    img {
        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
    }

    .feedback-message {
        background: #353535;
        color: #ffffff;
    }

    .feedback-message.success {
        background: #353535;
        color: #ffffff;
    }

    .form-check {
        background-color: inherit;
    }

    .my-modal-content,
    .popup {
        background-color: #353535;
    }

    .my-modal-content span,
    p,
    div {
        color: #ffffff;
    }

    .pair-div:hover {
        background-color: #ccc;
    }

    .pair-div.incompatible:hover {
        background-color: rgb(198, 146, 146);
    }

    .pair-div:hover span {
        color: #000;
    }

    .lm_header .lm_controls .lm_tabdropdown {
        opacity: 1;
    }

    .lm_header .lm_controls .lm_tabdropdown::before {
        animation: colorTween 5s infinite;
        opacity: 1;
    }

    @keyframes colorTween {
        0% {
            color: #ffff00;
        }

        100% {
            color: #ff7f00;
        }
    }

    .lm_header .lm_tab {
        padding-top: 0px !important;
    }

    .lm_header .lm_tab.lm_active {
        padding-top: 2px !important;
    }
}

